adds content.html include

--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -114,7 +114,7 @@
                         <!-- SITEMANAGER HEADER ENDS HERE -->
                         <!-- *********************************  -->
 
-<div w3-include-html="htmlcomponents/content.html"></div>
+        @@include('content.html')
 
                         <!-- *********************************  -->
                         <!-- SITEMANAGER START FOOTER -->
