removes old dis files

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -12,7 +12,7 @@
 	<script src="style-assets/lib/jquery/jquery.min.js"></script>
 </head>
     <body>
-        <header>
+        <!-- <header>
   <div class="">
   <!-- QUICKLINKS TOOLBAR -->
     <div class="navbar navbar-fixed-top toolbar blue-header">
@@ -263,7 +263,7 @@ $('#nav-search-close').click(function(){
 	$('#nav-cause, #nav-health, #nav-stories, #nav-research, #nav-involved, #nav-admissions, #nav-academics, #nav-campus, #nav-athletics, #nav-hub, #nav-alumni, #nav-faculty, #nav-search').fadeTo('slow', 1);
 });
 </script>
-
+ -->
         <main class="homepage-main">
             <section class="homepage-feature" id="homepage-feature-caption">
     <div class="homepage-feature-caption-item ">
