--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -7,7 +7,7 @@
     <link href="//fonts.googleapis.com/css?family=Karla:400,700|Open+Sans:400,400i,700|Raleway:400,700,900" rel="stylesheet">
     <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
 	<link rel="stylesheet" href="style-assets/css/style.css" />
-	<link rel="stylesheet" href="style-assets/lib/slick-1.6.0/slick/slick.css" />
+<!--	<link rel="stylesheet" href="style-assets/lib/slick-1.6.0/slick/slick.css" />-->
 	
 	<script src="style-assets/lib/jquery/jquery.min.js"></script> 
 </head> 
@@ -25,13 +25,19 @@
         @@include('footer.html')   
         <script src="style-assets/lib/jquery/jquery.min.js"></script> 
         <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script> 
-        <script src="style-assets/lib/slick-1.6.0/slick/slick.min.js"></script>
+<!--        <script src="style-assets/lib/slick-1.6.0/slick/slick.min.js"></script>-->
+        <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
         <script>
-            $(document).ready(function(){
-              $('#homepage-feature-caption').slick({
-                
-              });
-            });
+        $(document).ready(function() {
+            $('#homepage-feature-caption').carousel({
+                wrap: false,
+                interval: 1500,
+                keyboard: true
+            }); 
+            $('#homepage-feature-caption').on('slide.bs.carousel', function() {
+                console.log('slid');
+            } );
+        });
         </script>
     </body>
     
