Final client review fixes

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -75,8 +75,9 @@
         <div class="news-features">
              <!-- featured featured news item -->
             <div class="news-feature news-feature__large" data-mh="home-news"> 
-               <a href="javascript:void(0)">
+               
                 <div class="news-feature-bg" data-mh="home-news">
+                   <a href="javascript:void(0)">
                     <div class="news-feature-image">
                         <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />    
                     </div>
@@ -84,7 +85,7 @@
                         <h1 class="feature-heading news-feature-heading">Helping girls find their path to follow their dreams.</h1>
                         <p class="hidden-xs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur auctor dolor lorem, eget ultricies sapien hendrerit id. Suspendisse fringilla diam congue placerat consectetur.</p>
                     </div>
-                    
+                    </a>
                 </div>
                 </a>
             </div><!-- ./ .news-feature-item.featured -->
@@ -93,22 +94,26 @@
                 <div class="news-features__small-row">
                      <div class="news-feature">
                          <div class="news-feature-bg">
+                            <a href="javascript:void(0)">
                              <div class="news-feature-image">
                                  <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />    
                              </div>
                              <div class="news-feature-text">
                                  <h1 class="feature-heading news-feature-heading">Helping girls find their path to follow their dreams.</h1>
                              </div>        
+                             </a>
                          </div>
                      </div>   
                      <div class="news-feature">
                          <div class="news-feature-bg">
+                            <a href="javascript:void(0)">
                              <div class="news-feature-image">
                                  <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />
                              </div>
                              <div class="news-feature-text">
                                  <h1 class="feature-heading news-feature-heading">Helping girls find their path to follow their dreams.</h1>
                              </div>        
+                             </a>
                          </div>
                      </div><!-- ./ .news-feature-item -->
                 </div><!-- ./ .news-feature-items-wrap -->    
@@ -216,66 +221,78 @@
             <!-- ** Event ** -->
             <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
-                    <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
-                    <h2 class="home-event-title">New Student Convocation</h2>
-                    <p class="home-event-date">August 18th at 5:30 PM</p>
-                    <hr />
-                    <h2 class="home-event-venue">P.E. Events Center</h2>
+                   <a href="javascript:void(0)">
+                        <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
+                        <h2 class="home-event-title">New Student Convocation</h2>
+                        <p class="home-event-date">August 18th at 5:30 PM</p>
+                        <hr />
+                        <h2 class="home-event-venue">P.E. Events Center</h2>
+                    </a>
                 </div><!-- / .event-bg -->
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
             <!-- ** Event ** -->
             <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
-                    <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
-                    <h2 class="home-event-title">New Student Convocation</h2>
-                    <p class="home-event-date">August 18th at 5:30 PM</p>
-                    <hr />
-                    <h2 class="home-event-venue">P.E. Events Center</h2>
+                   <a href="javascript:void(0)">
+                        <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
+                        <h2 class="home-event-title">New Student Convocation</h2>
+                        <p class="home-event-date">August 18th at 5:30 PM</p>
+                        <hr />
+                        <h2 class="home-event-venue">P.E. Events Center</h2>
+                    </a>
                 </div><!-- / .event-bg -->
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
             <!-- ** Event ** -->
             <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
+                   <a href="javascript:void(0)">
                     <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
                     <h2 class="home-event-title">New Student Convocation</h2>
                     <p class="home-event-date">August 18th at 5:30 PM</p>
                     <hr />
                     <h2 class="home-event-venue">P.E. Events Center</h2>
+                    </a>
                 </div><!-- / .event-bg -->
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
             <!-- ** Event ** -->
             <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
+                   <a href="javascript:void(0)">
                     <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
                     <h2 class="home-event-title">New Student Convocation</h2>
                     <p class="home-event-date">August 18th at 5:30 PM</p>
                     <hr />
                     <h2 class="home-event-venue">P.E. Events Center</h2>
+                    </a>
                 </div><!-- / .event-bg -->
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
             <!-- ** Event ** -->
             <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
+                   <a href="javascript:void(0)">
                     <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
                     <h2 class="home-event-title">New Student Convocation</h2>
                     <p class="home-event-date">August 18th at 5:30 PM</p>
                     <hr />
                     <h2 class="home-event-venue">P.E. Events Center</h2>
+                    </a>
                 </div><!-- / .event-bg -->
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
             <!-- ** Event ** -->
             <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
+                   <a href="javascript:void(0)">
                     <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
                     <h2 class="home-event-title">New Student Convocation</h2>
                     <p class="home-event-date">August 18th at 5:30 PM</p>
                     <hr />
                     <h2 class="home-event-venue">P.E. Events Center</h2>
+                    </a>
                 </div><!-- / .event-bg -->
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
@@ -388,13 +405,13 @@
                                     <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
                                     <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-flickr fa-2x"></i></a></li>
                                     <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a></li>
-                            </ul>
+                            </ul> 
 
                       </div><!-- .campus-info  -->
 
                       <div class="footer-logo">
                           <p><a href="javascript:void(0)"> 
-                            <img src="style-assets/media/msudenver_informal.svg" alt="MSU logo" />
+                            <img src="style-assets/media/msudenver_informal.svg"  class="footer-logo-img" alt="MSU logo" />
                           </a></p>
                           <p class="privacy-statement"><a href="javascript:void(0)"><small>&copy; MSU Denver</small></a> - <a href="javascript:void(0)"><small>Privacy Statement</small></a></p>
 
