changes scss name from main 2016.scss to inner-styles.scss

--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -44,10 +44,9 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
 
 <!-- CSS -->
-<link rel="stylesheet" href="style-assets/css/main2016.css">
-<!-- T4 CSS -->
-<t4 type="media" id="109887"/>
-<t4 type="media" id="61332"/>
+<link rel="stylesheet" href="style-assets/css/inner-style.css" />
+<link rel="stylesheet" href="style-assets/lib/slick-1.6.0/slick/slick.css" />
+
 
 <!-- HTML5 shim & respond.js, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
@@ -58,7 +57,7 @@
 <!-- BEGINS MUlTIPLE COL SPECIFIC DEPENDENCIES  -->
 <script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/jquery/jquery.min.js"></script>
 
-<script src="http://www.w3schools.com/lib/w3data.js"></script>
+
 <!-- Fav and touch icons -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="<t4 type='media' id='60992' formatter='image/path'/>">
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="<t4 type='media' id='60991' formatter='image/path'/>">
