--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="us-en">
+<html lang="en-US"> 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1">
