delete old irrelevant jquery (from MOD)

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -253,8 +253,7 @@ $('.fa-close').click(function(){
 
 console.log('Script loaded - 9232015.3');
 function hideAllSubNav(){
-	$('#cause, #health, #stories, #research, #involved, #content-sub-nav, #content-sub-lower-wrapper, #content-sub-nav-lower-health, #content-sub-nav-lower-cause, #content-sub-nav-lower-stories, #content-sub-nav-lower-research, #content-sub-nav-lower-involved').hide();
-	$('#nav-cause, #nav-health, #nav-stories, #nav-research, #nav-involved, #nav-admissions, #nav-academics, #nav-campus, #nav-athletics, #nav-hub, #nav-alumni, #nav-faculty, #nav-search').parent().removeClass('active-nav');
+	$('#nav-admissions, #nav-academics, #nav-campus, #nav-athletics, #nav-hub, #nav-alumni, #nav-faculty, #nav-search').parent().removeClass('active-nav');
 	$('#hero').css('margin-top','0');
 }
 
@@ -264,7 +263,7 @@ hideAllSubNav();
 $('#nav-search').click(function(){
 	hideAllSubNav();
 	$('#content-sub-nav').hide();
-	$('#nav-cause, #nav-health, #nav-stories, #nav-research, #nav-involved, #nav-admissions, #nav-academics, #nav-campus, #nav-athletics, #nav-hub, #nav-alumni, #nav-faculty, #nav-search').fadeTo('fast', 0);
+	$('#nav-admissions, #nav-academics, #nav-campus, #nav-athletics, #nav-hub, #nav-alumni, #nav-faculty, #nav-search').fadeTo('fast', 0);
 	setTimeout(function(){
 		$('#search-input').fadeTo('fast', 1);
 		$('#search-text').focus();
@@ -273,7 +272,7 @@ $('#nav-search').click(function(){
 
 $('#nav-search-close').click(function(){
 	$('#search-input').hide();
-	$('#nav-cause, #nav-health, #nav-stories, #nav-research, #nav-involved, #nav-admissions, #nav-academics, #nav-campus, #nav-athletics, #nav-hub, #nav-alumni, #nav-faculty, #nav-search').fadeTo('slow', 1);
+	$('#nav-admissions, #nav-academics, #nav-campus, #nav-athletics, #nav-hub, #nav-alumni, #nav-faculty, #nav-search').fadeTo('slow', 1);
 });
 </script>
  
