adjust desktop nav menu elements position/spacing/font sizing

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -67,7 +67,7 @@
                    <a href="#"><li>Re-Admit</li></a>
                    <a href="#"><li>Non-Degree</li></a>
                    <a href="#"><li>Concurrently Enrolled</li></a>
-                   <a href="#">Cost</li></a>
+                   <a href="#"><li>Cost</li></a>
                  </ul>
                </li>
                <li id="nav-academics">
@@ -215,7 +215,7 @@ $('.navbar-toggle').click(function(){
 });
 
 // when menu item clicked, open/close pushdown menu
-if ($(window).width() > 767) {
+if ($(window).width() > 991) {
   $('.mobile-header').click(function(){
      $('.pushdown-menu').slideToggle();
   });
