adjust menu item column widths, adjust positions of search glyphicons/close/button

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -80,7 +80,7 @@
                    <a href="/education/"><li>School of Education</li></a>
                    <a href="/fys/"><li>First Year Success</li></a>
                    <a href="#"><li>Academic Support</li></a>
-                   <a href="#"><li>Online Courses/Extended Campus</li></a>
+                   <a href="#"><li>Online Courses / Extended Campus</li></a>
                    <a href="#"><li>Special Programs</li></a>
                  </ul>
                </li>
@@ -114,7 +114,7 @@
               <form action="https://www.msudenver.edu/search">
                 <div id="search-input" class="inner-addon left-addon search-input-desktop" role="search" action="https://www.msudenver.edu/search">
                   <span class="fa fa-search fa-search-opened"></span>
-                  <input  id="q" name="q" type="text" class="home-input" placeholder="SEARCH MSU DENVER" tabindex="2"; style="margin-left: -3px; outline: none;";>
+                  <input  id="q" name="q" type="text" class="home-input" placeholder="SEARCH MSU DENVER" tabindex="2"; style="margin-left: -3px; outline: none; font-weight: initial;";>
               <!-- AUTO SUGGEST -->
               <!-- Code auto suggest server by DEV, PROD, etc. -->
                   <div id="autoSuggestResults"></div>
