moves page-hero to own include

--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -38,10 +38,10 @@
 <meta name="google-site-verification" content="W3RS-MX1q0fLm2k731Ymz8fNmTCdPEizDE5Vzb9ZuoE" />
 
 <!-- CDN -->
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
+<!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
+<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'> -->
+<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'> -->
+<!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'> -->
 
 <!-- CSS -->
 <link rel="stylesheet" href="style-assets/css/inner-style.css" />
@@ -72,19 +72,15 @@
   @@include('header.html')
 
   @@include('site-header.html')
-  
+
     <div class="container" id="content">
         <div class="row">
                 <div class="col-lg-push-3 col-lg-9 col-md-9 col-md-push-3 col-sm-8 col-sm-push-4">
                    <div class="content row">
 <!-- BEGINS HERO IMAGE -->
 <t4 type="navigation" id="106" />
+@@include('page-hero.html')
 
-<div class="hero">
-<img class="img-responsive" src="http://sitemanager.msudenver.edu/media/content/wcms/departmentsiteguidelines/header_image.png" alt="work study help desk" style="   " />
-  <div class="hero-caption"><p>Body of Page Hero Image Content Type</p>
-<p>Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. <br /><br /></p></div>
-</div>
 
 
 
