--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -75,17 +75,13 @@
 
   @@include('site-header.html')
 
-    <div class="container" id="content">
+    <div class="container-fluid" id="content">
         <div class="row">
-                <div class="col-lg-push-3 col-lg-9 col-md-9 col-md-push-3 col-sm-8 col-sm-push-4">
+                <div class="col-xs-12 col-md-9 col-md-push-3 col-lg-push-4 col-lg-7">
                    <div class="content row">
 <!-- BEGINS HERO IMAGE -->
 <t4 type="navigation" id="106" />
 @@include('page-hero.html')
-
-
-
-
 
                         <!-- *********************************  -->
                         <!-- SITEMANAGER HEADER ENDS HERE -->
@@ -99,7 +95,7 @@
 
                     </div>
                 </div>
-                <div class="col-sm-4 col-sm-pull-8 col-md-3 col-md-pull-9 col-lg-3 col-lg-pull-9">
+                <div class="col-xs-12 col-md-3 col-md-pull-9 col-lg-3 col-lg-pull-6">
 
 <!-- BEGINS LEFT SIDE (LINK COLUMN -/- SIDEMENU) -->
 <div class="sidebar-nav">
