--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US"> 
+<html lang="en-US">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1">
@@ -8,23 +8,24 @@
     <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
 	<link rel="stylesheet" href="style-assets/css/style.css" />
 <!--	<link rel="stylesheet" href="style-assets/lib/slick-1.6.0/slick/slick.css" />-->
-	
-	<script src="style-assets/lib/jquery/jquery.min.js"></script> 
-</head> 
-    <body>  
-        @@include('header.html') 
-        <main class="homepage-main">  
-            @@include('homepage-feature-caption.html')   
-            @@include('homepage-ryor.html')  
-            @@include('homepage-news.html') 
-            @@include('homepage-at-a-glance.html')  
-            @@include('homepage-community.html') 
-            @@include('homepage-events.html') 
-            
+
+	<script src="style-assets/lib/jquery/jquery.min.js"></script>
+</head>
+    <body>
+        @@include('header.html')
+        <main class="homepage-main">
+						@@include('homepage-second-nav.html')
+            @@include('homepage-feature-caption.html')
+            @@include('homepage-ryor.html')
+            @@include('homepage-news.html')
+            @@include('homepage-at-a-glance.html')
+            @@include('homepage-community.html')
+            @@include('homepage-events.html')
+
         </main>
-        @@include('footer.html')   
-        <script src="style-assets/lib/jquery/jquery.min.js"></script> 
-        <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script> 
+        @@include('footer.html')
+        <script src="style-assets/lib/jquery/jquery.min.js"></script>
+        <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
 <!--        <script src="style-assets/lib/slick-1.6.0/slick/slick.min.js"></script>-->
         <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
         <script>
@@ -33,12 +34,12 @@
                 wrap: false,
                 interval: 1500,
                 keyboard: true
-            }); 
+            });
             $('#homepage-feature-caption').on('slide.bs.carousel', function() {
                 console.log('slid');
             } );
         });
         </script>
     </body>
-    
+
 </html>
