Removes additional fonts
-removes old styles from programs sheets
-removes old fonts
-moves “edit this page” styles to styles to import

--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -38,13 +38,8 @@
 <meta name="google-site-verification" content="W3RS-MX1q0fLm2k731Ymz8fNmTCdPEizDE5Vzb9ZuoE" />
 
 <!-- CDN -->
-<!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
-<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'> -->
-<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'> -->
-<!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'> -->
-<link href="//fonts.googleapis.com/css?family=Karla:400,700|Open+Sans:400,400i,700|Raleway:400,700,900" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
 <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
-
 <!-- CSS -->
 <link rel="stylesheet" href="style-assets/css/inner-style.css" />
 <link rel="stylesheet" href="style-assets/lib/slick-1.6.0/slick/slick.css" />
@@ -94,6 +89,7 @@
                         <!-- *********************************  -->
 
                     </div>
+                    <t4 type="edit-page" action="direct-edit" text='<i class="fa fa-edit"> </i> Edit this page' />
                 </div>
                 <div class="col-xs-12 col-md-3 col-md-pull-9 col-lg-3 col-lg-pull-6">
 
