--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1">
 	<title>MSU Denver - Homepage</title>
-    <link href="//fonts.googleapis.com/css?family=Karla:400,700|Open+Sans:400,400i,700|Raleway:400,700,900" rel="stylesheet">
-    <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
+  <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
+	<link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
 	<link rel="stylesheet" href="style-assets/css/style.css" />
 <!--	<link rel="stylesheet" href="style-assets/lib/slick-1.6.0/slick/slick.css" />-->
 
