--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -83,6 +83,7 @@
                         <!-- *********************************  -->
 
         @@include('content.html')
+        @@include('panel.html')
 
                         <!-- *********************************  -->
                         <!-- SITEMANAGER START FOOTER -->
