format secondary nav menu (phase 1)

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -275,7 +275,17 @@ $('#nav-search-close').click(function(){
 
         <main class="homepage-main">
 						<section class="homepage-feature" id="homepage-second-nav" style="background-image:url(../media/RYOR_bg_extended.png);">
-  <span>Current Students </span>   <span>Catalog</span>   <span>Athletics</span>
+  <ul>
+    <li>
+      Current Students
+    </li>
+    <li>
+      Catalog
+    </li>
+    <li>
+      Athletics
+    </li>
+  </ul>
 </section>
 
             <section class="homepage-feature carousel t4-slide slide" id="homepage-feature-caption">
