hide secondary nav on mobile

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -280,7 +280,7 @@ $('#nav-search-close').click(function(){
       Current Students
     </li>
     <li>
-      Catalog
+      Schedules, Calendar &#38; Catalog
     </li>
     <li>
       Athletics
