--- a/www-root/index.html
+++ b/www-root/index.html
@@ -274,16 +274,16 @@ $('#nav-search-close').click(function(){
 </script>
 
         <main class="homepage-main">
-						<section class="homepage-feature" id="homepage-second-nav" style="background-image:url(../media/RYOR_bg_extended.png);">
+						<section class="homepage-feature" id="homepage-second-nav">
   <ul>
     <li>
-      Current Students
+      <a href="">Current Students</a>
     </li>
     <li>
-      Schedules, Calendar &#38; Catalog
+      <a href="">Schedules, Calendar &#38; Catalog</a>
     </li>
     <li>
-      Athletics
+      <a href="">Athletics</a>
     </li>
   </ul>
 </section>
