reformat header: remove tertiary nav bar, change secondary nav elements

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -29,7 +29,8 @@
               <a href="http://msudenver.edu/alumni/give/"><div class="col-xs-1 apply-button give-visit-buttons">GIVE</div></a>
               <a href="https://msudenver.edu/visit/"><div class="col-xs-1 apply-button give-visit-buttons">VISIT</div></a>
               <span class="fa fa-search fa-search-mobile"></span>
-              <div class="col-xs-12 faculty-staff">
+              <div class="col-xs-12 faculty-staff-students">
+                <a href="">Current Students|</a>
                 <a href="">Faculty &amp; Staff</a>
               </div>
             </div>
@@ -84,22 +85,9 @@
                    <a href="#"><li>Special Programs</li></a>
                  </ul>
                </li>
-               <li id="nav-campus">
-                 <a class="mobile-header mobile-campus"><span class="fa fa-chevron-down pull-right"></span>Campus Life</a>
-                 <ul class="pushdown-menu pushdown-campus">
-                   <a href="/campuslife/"><li>Campus Life</li></a>
-                   <a href="/studentactivities/"><li>Student Activities</li></a>
-                   <a href="/campuslife/wellnessrecreation/"><li>Health &amp; Counseling</li></a>
-                   <a href="/campuslife/involvementrecreation/"><li>Involvement &amp; Recreation</li></a>
-                   <a href="/studentengagementandwellness/"><li>Student Engagement &#38; Wellness</li></a>
-                   <a href="/campuslife/studentpublications/"><li>Student Media</li></a>
-                   <a href=""><li>Student Organizations</li></a>
-                   <a href=""><li>Student Resources</li></a>
-                 </ul>
-               </li>
                <li id="nav-alumni">
-                 <a class="mobile-header mobile-alumni menu-last"><span class="fa fa-chevron-down pull-right"></span>Alumni</a>
-                 <ul class="pushdown-menu pushdown-alumni menu-last">
+                 <a class="mobile-header mobile-alumni"><span class="fa fa-chevron-down pull-right"></span>Alumni &amp; Friends</a>
+                 <ul class="pushdown-menu pushdown-alumni">
                    <a href="/alumni/"><li>Alumni</li></a>
                    <a href="/alumni/careerservices/"><li>Career Services</li></a>
                    <a href="/alumni/alumnibenefits/"><li>Alumni Benefits</li></a>
@@ -107,6 +95,14 @@
                    <a href="/alumni/continuingeducation/"><li>Continuing Education</li></a>
                    <a href="/alumni/studentalumniassociation/"><li>Student Alumni Association</li></a>
                    <a href=""><li>Alumni Events</li></a>
+                 </ul>
+               </li>
+               <li id="">
+                 <a class="mobile-header mobile-alumni menu-last"><span class="fa fa-chevron-down pull-right"></span>Athletics</a>
+                 <ul class="pushdown-menu pushdown-alumni menu-last">
+                   <a href=""><li>Athletics</li></a>
+                   <a href=""><li></li></a>
+                   <a href=""><li></li></a>
                  </ul>
                </li>
                <li id="nav-search"><div><span class="fa fa-search search-desktop"></span></div></li>
@@ -274,7 +270,7 @@ $('#nav-search-close').click(function(){
 </script>
 
         <main class="homepage-main">
-						<section class="homepage-feature" id="homepage-second-nav">
+						<!-- <section class="homepage-feature" id="homepage-second-nav">
   <ul>
     <li>
       <a href="">Current Students</a>
@@ -287,7 +283,7 @@ $('#nav-search-close').click(function(){
     </li>
   </ul>
 </section>
-
+ -->
             <section class="homepage-feature carousel t4-slide slide" id="homepage-feature-caption">
     <div class="carousel-inner">
         <div class="homepage-feature-caption-item item active ">
