--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -14,7 +14,7 @@
     <body>
         @@include('header.html')
         <main class="homepage-main">
-						@@include('homepage-second-nav.html')
+						<!-- @@include('homepage-second-nav.html') -->
             @@include('homepage-feature-caption.html')
             @@include('homepage-ryor.html')
             @@include('homepage-news.html')
