format athletics link in menu

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -90,8 +90,8 @@
                  </ul>
                </li>
                <li id="nav-alumni">
-                 <a class="mobile-header mobile-alumni"><span class="fa fa-chevron-down pull-right"></span>Alumni &amp; Friends</a>
-                 <ul class="pushdown-menu pushdown-alumni">
+                 <a class="mobile-header mobile-alumni"><span class="fa fa-chevron-down pull-right"></span>Alumni</a>
+                 <ul class="pushdown-menu pushdown-alumni menu-last">
                    <a href="/alumni/"><li>Alumni</li></a>
                    <a href="/alumni/careerservices/"><li>Career Services</li></a>
                    <a href="/alumni/alumnibenefits/"><li>Alumni Benefits</li></a>
@@ -102,12 +102,7 @@
                  </ul>
                </li>
                <li id="">
-                 <a class="mobile-header mobile-alumni menu-last"><span class="fa fa-chevron-down pull-right"></span>Athletics</a>
-                 <ul class="pushdown-menu pushdown-alumni menu-last">
-                   <a href=""><li>Athletics</li></a>
-                   <a href=""><li></li></a>
-                   <a href=""><li></li></a>
-                 </ul>
+                 <a href="" class="mobile-alumni athletics-header">Athletics</a>
                </li>
                <li id="nav-search"><div><span class="fa fa-search search-desktop"></span></div></li>
         <!-- Hidden Search Bar-->
