fix menu item padding

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -101,7 +101,7 @@
                    <a href=""><li>Alumni Events</li></a>
                  </ul>
                </li>
-               <li id="">
+               <li id="nav-athletics">
                  <a href="" class="mobile-alumni athletics-header">Athletics</a>
                </li>
                <li id="nav-search"><div><span class="fa fa-search search-desktop"></span></div></li>
