HAMBURGER/SEARCH TOGGLE WORKS on 2column with this line added

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -198,6 +198,7 @@ $('.search-text-mobile').focusout(function () {
 $('.fa-search-mobile').click(function(){
    $('.search-input-mobile').slideToggle();
    $('#content-nav').removeClass('in');
+   $('#content-nav').addClass('collapse');
    $('.fa-bars').css('background-color', 'transparent');
    $('.fa-search-mobile').css('background-color', '#005fae');
 });
