--- a/www-root/index.html
+++ b/www-root/index.html
@@ -87,6 +87,7 @@
                    <a href="#"><li>Academic Support</li></a>
                    <a href="#"><li>Online Courses / Extended Campus</li></a>
                    <a href="#"><li>Special Programs</li></a>
+                   <a href="#"><li>Student Engagement &amp; Wellness</li></a>
                  </ul>
                </li>
                <li id="nav-alumni">
