add ADA label for mobile search input field

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -133,6 +133,7 @@
                   <div id="content-nav-mobile">
                     <div id="search-input" class="inner-addon left-addon search-input-mobile">
                         <span class="fa fa-search fa-search-opened-mobile"></span>
+                        <label for="q" class="sr-only">Search MSU Denver site</label>
                               <input  id="q"
                                 name="q"
                                 type="text"
