--- a/www-root/index.html
+++ b/www-root/index.html
@@ -20,7 +20,7 @@
           <span class="fa fa-bars"></span>
         </button>
             <div class="row">
-              <div class="col-xs-8">
+              <div class="col-xs-9 col-sm-8">
                 <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Logo">
               </div>
               <a href="/admissions"><div class="col-xs-1 apply-button">APPLY</div></a>
