fixes header padding and navigation

--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -42,7 +42,7 @@
 <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
 <!-- CSS -->
 <link rel="stylesheet" href="style-assets/css/inner-style.css" />
-<link rel="stylesheet" href="style-assets/lib/slick-1.6.0/slick/slick.css" />
+<!-- <link rel="stylesheet" href="style-assets/lib/slick-1.6.0/slick/slick.css" /> -->
 
 
 <!-- HTML5 shim & respond.js, for IE6-8 support of HTML5 elements -->
@@ -64,9 +64,9 @@
 
 </head>
 
-<body>
+<body>  @@include('header.html')
   <a href="#content" class="sr-only">Skip to main content</a>
-  @@include('header.html')
+
 
   @@include('site-header.html')
 
