--- a/www-root/index.html
+++ b/www-root/index.html
@@ -35,9 +35,9 @@
         </div>
         <nav class="navbar-collapse collapse" id="content-nav" role="navigation">
             <div>
-              <button type="button" class="btn btn-default visit-give-mobile">Visit</button>
-              <button type="button" class="btn btn-default visit-give-mobile">Give</button>
-              <button type="button" class="btn btn-default apply-mobile">Apply</button>
+              <a href="/visit"><button type="button" class="btn btn-default visit-give-mobile">Visit</button></a>
+              <a href="/giving"><button type="button" class="btn btn-default visit-give-mobile">Give</button></a>
+              <a href="/admissions"><button type="button" class="btn btn-default apply-mobile">Apply</button></a>
               <ul class="fac-staf-stu-mobile">
                 <li><a href="/studenthub">Current Students</a></li>
                 <li><a href="/facstaff">Faculty &amp; Staff</a></li>
