adds arial-label on navigation

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -43,8 +43,8 @@
                 <li><a href="/facstaff">Faculty &amp; Staff</a></li>
               </ul>
             </div>
-            <ul class="nav navbar-nav navbar-center dropdown" id="nav-middle">
-              <li id="nav-faculty">
+            <ul class="nav navbar-nav navbar-center dropdown" id="nav-middle" aria-controls="st1">
+              <li id="nav-faculty" role="button" aria-haspopup="true" aria-label="About Menu">
                 <a class="mobile-header mobile-about">About<span class="fa fa-chevron-down pull-right"></span></a>
                 <ul class="pushdown-menu pushdown-about">
                   <li><a href="/about">About</a></li>
@@ -56,7 +56,7 @@
                   <li><a href="/commencement">Graduation / Commencement</a></li>
                  </ul>
                </li>
-               <li id="nav-admissions">
+               <li id="nav-admissions" role="button" aria-haspopup="true" aria-label="Prospective Students Menu">
                  <a class="mobile-header mobile-ps"><span class="fa fa-chevron-down pull-right"></span>Prospective Students</a>
                  <ul class="pushdown-menu pushdown-ps">
                    <li><a href="/admissions">Prospective Students</a></li>
@@ -73,7 +73,7 @@
                    <li><a href="/cost">Cost</a></li>
                  </ul>
                </li>
-               <li id="nav-academics">
+               <li id="nav-academics" role="button" aria-haspopup="true" aria-label="Academics Menu">
                  <a class="mobile-header mobile-academics"><span class="fa fa-chevron-down pull-right"></span>Academics</a>
                  <ul class="pushdown-menu pushdown-academics">
                    <li><a href="/programs/">Academic Programs</a></li>
@@ -89,7 +89,7 @@
                    <li><a href="/studentengagementandwellness">Student Engagement &amp; Wellness</a></li>
                  </ul>
                </li>
-               <li id="nav-alumni">
+               <li id="nav-alumni" role="button" aria-haspopup="true" aria-label="Alumni &amp; Friends Menu">
                  <a class="mobile-header mobile-alumni"><span class="fa fa-chevron-down pull-right"></span>Alumni &amp; Friends</a>
                  <ul class="pushdown-menu pushdown-alumni menu-last">
                    <li><a href="/alumni/">Alumni &amp; Friends</a></li>
@@ -101,10 +101,10 @@
                    <li><a href="/alumni/events">Alumni Events</a></li>
                  </ul>
                </li>
-               <li id="nav-athletics">
+               <li id="nav-athletics" role="button" aria-haspopup="true" aria-label="Athletics Link">
                  <a href="http://roadrunnersathletics.com" class="mobile-alumni athletics-header">Athletics</a>
                </li>
-               <li id="nav-search"><span class="fa fa-search search-desktop"></span></li>
+               <li id="nav-search" role="button" aria-label="Search"><span class="fa fa-search search-desktop"></span></li>
         <!-- Hidden Search Bar-->
               <form action="https://www.msudenver.edu/search">
                 <div id="search-input" class="inner-addon left-addon search-input-desktop" role="search" action="https://www.msudenver.edu/search">
@@ -232,16 +232,16 @@ function hideAllSubNav(){
 
 hideAllSubNav();
 
-/* Search Click Event */
-$('#nav-search').click(function(){
-	hideAllSubNav();
-	$('#content-sub-nav').hide();
-	$('#nav-admissions, #nav-academics, #nav-campus, #nav-athletics, #nav-hub, #nav-alumni, #nav-faculty, #nav-search').fadeTo('fast', 0);
-	setTimeout(function(){
-		$('#search-input').fadeTo('fast', 1);
-		$('#search-text').focus();
-	}, 100);
-});
+// /* Search Click Event */
+// $('#nav-search').click(function(){
+// 	hideAllSubNav();
+// 	$('#content-sub-nav').hide();
+// 	$('#nav-admissions, #nav-academics, #nav-campus, #nav-athletics, #nav-hub, #nav-alumni, #nav-faculty, #nav-search').fadeTo('fast', 0);
+// 	setTimeout(function(){
+// 		$('#search-input').fadeTo('fast', 1);
+// 		$('#search-text').focus();
+// 	}, 100);
+// });
 
 $('#nav-search-close').click(function(){
 	$('#search-input').hide();
